--- a/index.html
+++ b/index.html
@@ -4,18 +4,22 @@
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rocker</title>
+    <title>Chip</title>
 </head>
 <body>
-    <h1>Rocker</h1>
+    <h1>Chip's Adventure</h1>
     <div class="main">
         <canvas id="canvas" width="800" height="600"></canvas>
         <div class="words">
-            <div class="timer">Time: <span id="timer">0</span></div>
+            <h3>Level 1</h3>
+            <hr>
             <div class="instructions">
                 <h2>Instructions</h2>
-                <p>Use the arrow keys to move the rocker left and right. The goal is to collect as many stars as possible before the timer runs out.</p>
+                <p>Using the space bar to jump and arrow keys to move left and right navigate chip to the goal.</p>
+                <p>Avoid the lava and mud slows you down</p>
             </div>
+            <hr>
+            <div class="timer">Time: <span id="timer">0</span></div>
         </div>
     </div>
     <script src="script.js"></script>
