--- a/secondlevel.html
+++ b/secondlevel.html
@@ -11,6 +11,9 @@
     <div class="main">
         <canvas id="canvas" width="800" height="600"></canvas>
         <div class="words">
+            <audio autoplay>
+                <source src="Polluted Platoon Pathfinder_Another Crab's Treasure OST.mp3" type="audio/mp3">
+            </audio>
             <h3>Level 2</h3>
             <hr>
             <div class="instructions">
